# ScaleForge

./: .gitignore  Makefile  README.md  Setup.ps1  docker-compose.yaml  loki.js  package.json  prom_client.js  prometheus.yml  setup.sh  start.ps1
.github/workflows/: cd.yml  ci.yml  deploy.yml
admin/: .env.example  package.json  pnpm-lock.yaml
admin/app/: globals.css
admin/components/: dashboard-header.tsx  data-stream-panel.tsx  k8s-icons.tsx  (+8 more)
aws/: auto_scaler.py  main.py  pyproject.toml
backend/: app.js  package-lock.json  package.json  prometheus.yml  start.sh
bot/: config.py  main.py  pyproject.toml  requirements.txt
bot/agents/: analyze.py  model.py  rca.py  solution.py  state.py
bot/configs/: models.py
bot/graph/: graph.py
bot/store/: rag.py
broker/: bun.lockb  connection.ts  package.json  types.ts
client/: SETUP.md  package.json  pnpm-lock.yaml
frontend/: package.json
inventory-svc/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
k8s/: client.sh  inventory-forward.sh  inventory.yml  orders-forward.sh  orders.yml  server.go  start.sh  stop.sh
monitoring/: docker-compose.yml  loki-config.yml  prometheus.yml
orders-svc/: Dockerfile  docker-compose.yml  package.json
proto/: booking.proto
qr-engine/: go.mod  go.sum  main.go
server/: package.json  pnpm-lock.yaml
serverless/: Dockerfile  README.md  bun.lockb  index.ts  package.json  utils.ts
service/: package.json  pnpm-lock.yaml
services/: Dockerfile  bun.lockb  docker-compose.yml  package.json  setup.sh
sql-proxy/: main.go
webhook/: index.mjs  package.json
(+160 files in other folders)
